                         CHANGES version 2.6

              This file summarizes changes made since 1.0

Version 2.6
-----------
* Internal optimizing changes and improvements


Version 2.5
-----------
* Removed GPL license exceptions. The library is now licensed under
  the  GPL version 3 only. 
* Deprecated ResultSet_readData(). This function _is_ useful for MySQL,
  but not for other drivers where it has some overhead.
* Added GCC __attribute__ printf checks where applicable
* PostgreSQL: Blob retrieval optimized
* PostgreSQL: Added unix-socket parameter to connection URL
* Internal optimizing changes and improvements


Version 2.4
-----------
* The options --with_mysql=<path> and --with_postgresql=<path> to
  configure has a new meaning; If <path> is given it is assumed to be
  the full path to respectively mysql_config and to pg_config. Example:
  ./configure --with_mysql=/usr/local/mysql/bin/mysql_config 
  ./configure --with_postgresql=/usr/local/pgsql/bin/pg_config
* From version 2.4, libzdb places its header files into a zdb
  sub-directory as in, <prefix>/include/zdb. Clients must now use the
  include-dir compiler flag, -I<prefix>/include/zdb.
* Internal optimizing changes and improvements
* Changed two prototypes to 'extern void foo(void)' so the library
  compiles without warning if -Wstrict-prototype is used with gcc.
  Thanks to Paul Stevens
Bug fixes:
* Fixed off-by-one bug in Vector_remove
* PostgreSQL: Fixed PostgresqlResultSet_getColumnSize to report correct
  value.
* PostgreSQL: Improved error reporting and fixed potential allocation
  bugs in prepared statements.
* PostgreSQL: Calling PreparedStatement_setString with a NULL value now
  works

Version 2.3
-----------
* Cleaned up API and changed function return type to void for 
  those functions that can throw exception on error. 
* Support variable arguments in Connection_prepareStatement() 
  to make it easy to build prepared statements in-place

Version 2.2.3
-------------
Bug fixes: