@@ -5,6 +5,7 @@
 Version 2.6
 -----------
 * Internal optimizing changes and improvements
+* Enable shared cache mode for sqlite >= 3.5
 
 
 Version 2.5
